# sweet-solana-twitter

./: .pnp.cjs  Anchor.toml  README.md  Readme.md  package-lock.json  package.json
client/: next.config.ts  package-lock.json  package.json
client/src/app/: globals.css  layout.tsx
client/src/app/admin/: page.tsx
client/src/app/feed/: page.tsx
client/src/app/profile/: page.tsx
client/src/app/profile/[address]/: page.tsx
client/src/components/: AppWalletProvider.tsx  Comments.tsx  CreatePostModal.tsx  CreateProfile.tsx  EmptyState.tsx  Header.tsx  IPFSImage.tsx  InitializeProgram.tsx  PostCard.tsx  ProfileCard.tsx  ProfileHeader.tsx  StartCollaborationModal.tsx  TabNavigation.tsx  UserCard.tsx
client/src/services/: blockchain.tsx  twitter_platform.json  twitter_platform.ts
client/src/utils/: helpers.ts  interfaces.ts  pinata.ts
programs/solana-twitter/: Cargo.toml
programs/solana-twitter/src/: lib.rs
programs/solana-twitter/src/constants/: mod.rs
programs/solana-twitter/src/errors/: mod.rs
programs/solana-twitter/src/instructions/: create_collaboration_post.rs  create_comment.rs  create_post.rs  create_profile.rs  delete_comment.rs  delete_post.rs  donate_to_creator.rs  follow_user.rs  initialize.rs  like_post.rs  mod.rs  unfollow_user.rs  unlike_post.rs  update_profile.rs
programs/solana-twitter/src/states/: comment.rs  donation.rs  follow.rs  like.rs  mod.rs  post.rs  program_state.rs  user_profile.rs
tests/: solana-twitter.ts
