[package]
name = "twitter-platform"
version = "0.1.0"
description = "A decentralized Twitter-like platform on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "twitter_platform"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"